--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1859,7 +1859,7 @@
                 useCORS: true,
                 allowTaint: true,
                 backgroundColor: '#1a1a1a',
-                height: 460
+                height: window.innerHeight * 0.6
             }).then(canvas => {
                 // Restore after screenshot
                 snowflakes.forEach((flake, index) => flake.style.display = originalSnowflakeDisplay[index]);
