--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1723,11 +1723,12 @@
                 }
             }
 
+            const screenshotHeight = window.innerWidth > 768 ? 600 : 460;
             html2canvas(document.body, {
                 useCORS: true,
                 allowTaint: true,
                 backgroundColor: '#1a1a1a',
-                height: 460
+                height: screenshotHeight
             }).then(canvas => {
                 // Restore after screenshot
                 snowflakes.forEach((flake, index) => flake.style.display = originalSnowflakeDisplay[index]);
@@ -1855,11 +1856,12 @@
                 if (gameSelect) gameSelect.style.display = 'none';
             }
 
+            const screenshotHeight = window.innerWidth > 768 ? 800 : 600;
             html2canvas(document.body, {
                 useCORS: true,
                 allowTaint: true,
                 backgroundColor: '#1a1a1a',
-                height: window.innerHeight * 0.75
+                height: screenshotHeight
             }).then(canvas => {
                 // Restore after screenshot
                 snowflakes.forEach((flake, index) => flake.style.display = originalSnowflakeDisplay[index]);
